--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "init": "^0.1.2",
+    "method-override": "^3.0.0",
     "mysql": "^2.17.1",
-    "mysql2": "^1.7.0",
-    "sequelize": "^5.19.1"
+    "mysql2": "^1.7.0"
   },
   "devDependencies": {},
   "scripts": {
